GLP cede province, nerf high sea, patch MT calmador

--- a/3362815204/localisation/GLP_gui_l_english.yml
+++ b/3362815204/localisation/GLP_gui_l_english.yml
@@ -50,8 +50,8 @@ glp_spawn_rebel_loc: "§RRebel Spawning§!"
 #Empty buttons ready to be changed
 
 
-glp_supress_inquisition_decision_loc: "Supress Inquisition Vote" #To be removed
-glp_polish_events_spawn_loc: "Spawn Polish Sejm Events" #To be removed
+glp_a2a_annex_loc: "Annex province (MJ2)"
+glp_a1a_annex_loc: "Annex province (MJ1)"
 glp_remove_autonomy_loc: "Remove Autonomy(Elizabeth)" #To be removed
 glp_spawn_next_isntitution_loc: "Spawn Next Institution(Dracula)" #To be removed
 glp_spawn_npc_advisor_loc: "Spawn NPC Advisor" #To be removed
