--- a/3362815204/localisation/GLP_gui_l_french.yml
+++ b/3362815204/localisation/GLP_gui_l_french.yml
@@ -49,8 +49,8 @@ glp_spawn_rebel_loc: "§RApparitions de rebelles§!"
 
 #Boutons vides prêts à être modifiés
 
-glp_supress_inquisition_decision_loc: "Supprimer le Vote de l'Inquisition" #À supprimer
-glp_polish_events_spawn_loc: "Faire apparaître les Événements du Sejm Polonais" #À supprimer
+glp_a2a_annex_loc: "Annexer la province (MJ2)" #À supprimer
+glp_a1a_annex_loc: "Annexer la province (MJ1)"
 glp_remove_autonomy_loc: "Retirer l'Autonomie (Elizabeth)" #À supprimer
 glp_spawn_next_isntitution_loc: "Faire apparaître la Prochaine Institution (Dracula)" #À supprimer
 glp_spawn_npc_advisor_loc: "Faire apparaître un Conseiller PNJ" #À supprimer
