--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -1162,6 +1162,18 @@
  glp_save_edit_events.EVTDESC77:0 "Choose what estate you want to modify in [estate_modification_target.GetName].\n\nYou may augment or diminish the loyalty and the influence of each estate of the country [estate_modification_target.GetName]."
  glp_save_edit_events.EVTESTATEZZ1:0 "Nevermind"
 
+ glp_save_edit_events.EVTNAME78: "Cede province"
+ glp_save_edit_events.EVTDESC78: "By the MJ power this land is our"
+ glp_save_edit_events.EVTNAME78A: "EEEEEEEEEEEEEE"
+
+ glp_save_edit_events.EVTNAME79: "Cede province"
+ glp_save_edit_events.EVTDESC79: "By the MJ2 power this land is our"
+ glp_save_edit_events.EVTNAME79A: "EEEEEEEEEEEEEE"
+
+ glp_save_edit_events.EVTNAME79: "Important Leader"
+ glp_save_edit_events.EVTDESC79: "Your leader has been granted exceptional willpower"
+ glp_save_edit_events.EVTNAME79A: "Glory to our king"
+
  glp_save_edit_events.EVTESTATEA01:0 "Immediate loyalty §Gincrease§!"
  glp_save_edit_events_estate.EVTNAME1:0 "Estate instant §Gloyalty§! menu"
  glp_save_edit_events_estate.EVTDESC1:0 "Please choose what estate you want to increase the loyalty of in [estate_modification_target.GetName]."
