--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -1108,6 +1108,18 @@
  glp_save_edit_events.EVTNAME77:0 "Modifier les états de [estate_modification_target.GetName]"
  glp_save_edit_events.EVTDESC77:0 "Choisissez quel état vous souhaitez modifier dans [estate_modification_target.GetName].\n\nVous pouvez augmenter ou diminuer la loyauté et l'influence de chaque état du pays [estate_modification_target.GetName]."
  glp_save_edit_events.EVTESTATEZZ1:0 "Laissez tomber"
+
+ glp_save_edit_events.EVTNAME78: "Ceder la province"
+ glp_save_edit_events.EVTDESC78: "Au non du MJ cette terre est à nous"
+ glp_save_edit_events.EVTNAME78A: "EEEEEEEEEEEEEE"
+
+ glp_save_edit_events.EVTNAME79: "Ceder la province"
+ glp_save_edit_events.EVTDESC79: "Au non du MJ2 cette terre est à nous"
+ glp_save_edit_events.EVTNAME79A: "EEEEEEEEEEEEEE"
+
+ glp_save_edit_events.EVTNAME79: "Leader important"
+ glp_save_edit_events.EVTDESC79: "Votre leader à gagner une volonté de vivre hors du commun"
+ glp_save_edit_events.EVTNAME79A: "Gloire à notre Roi!"
  
  glp_save_edit_events.EVTESTATEA01:0 "Augmentation §Gimmédiate§! de la loyauté"
  glp_save_edit_events_estate.EVTNAME1:0 "Menu de §Gloyauté§! instantanée des états"
