Push Empire MJ tool cleanup annoucements unused

--- a/3362815204/localisation/GLP_gui_l_english.yml
+++ b/3362815204/localisation/GLP_gui_l_english.yml
@@ -46,14 +46,13 @@ glp_change_dev_in_province_loc: "§GModification of dev§!"
 glp_magical_manupulation_loc: "§GMagical Manipulation§!"
 glp_event_perso_MJ_loc: "§GEvent Perso GM§!" 
 glp_spawn_rebel_loc: "§RRebel Spawning§!" 
+glp_a2a_annex_loc: "Annex province (MJ2)"
+glp_a1a_annex_loc: "Annex province (MJ1)"
+glp_empire_decision_loc: "Empire decision" 
 
 #Empty buttons ready to be changed
 
-
-glp_a2a_annex_loc: "Annex province (MJ2)"
-glp_a1a_annex_loc: "Annex province (MJ1)"
 glp_remove_autonomy_loc: "Remove Autonomy(Elizabeth)" #To be removed
-glp_spawn_next_isntitution_loc: "Spawn Next Institution(Dracula)" #To be removed
 glp_spawn_npc_advisor_loc: "Spawn NPC Advisor" #To be removed
 glp_inquisition_events_loc: "Inquisition Events" #To be removed
 glp_call_sejm_loc: "Call Sejm" #To be removed
