--- a/3362815204/localisation/GLP_gui_l_french.yml
+++ b/3362815204/localisation/GLP_gui_l_french.yml
@@ -46,13 +46,13 @@ glp_change_dev_in_province_loc: "§GModification du développement§!"
 glp_magical_manupulation_loc: "§GManipulations Magique§!"
 glp_event_perso_MJ_loc: "§GEvent Perso MJ§!"
 glp_spawn_rebel_loc: "§RApparitions de rebelles§!" 
+glp_a2a_annex_loc: "Annexer la province (MJ2)" 
+glp_a1a_annex_loc: "Annexer la province (MJ1)"
+glp_empire_decision_loc: "Décision d'empire" 
 
 #Boutons vides prêts à être modifiés
 
-glp_a2a_annex_loc: "Annexer la province (MJ2)" #À supprimer
-glp_a1a_annex_loc: "Annexer la province (MJ1)"
 glp_remove_autonomy_loc: "Retirer l'Autonomie (Elizabeth)" #À supprimer
-glp_spawn_next_isntitution_loc: "Faire apparaître la Prochaine Institution (Dracula)" #À supprimer
 glp_spawn_npc_advisor_loc: "Faire apparaître un Conseiller PNJ" #À supprimer
 glp_inquisition_events_loc: "Événements de l'Inquisition" #À supprimer
 glp_call_sejm_loc: "Convoquer le Sejm" #À supprimer
