--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -699,22 +699,12 @@
  glp_save_edit_events.EVTCAPACTIVEA54:0 "Idea  activation"
  glp_save_edit_events.EVTCAPACTIVEA55:0 "Idea  activation"
  glp_save_edit_events.EVTCAPACTIVEA56:0 "Idea  activation"
-# glp_save_edit_events.EVTOPTC28:0 "Colonial Quest Reward"
-# glp_save_edit_events.EVTOPTD28:0 "Missionary Quest Reward"
-# glp_save_edit_events.EVTOPTE28:0 "Conversion Quest Reward"
-# glp_save_edit_events.EVTOPTF28:0 "Cavalry Mercenary Quest Reward"
-# glp_save_edit_events.EVTOPTG28:0 "Trade Quest Reward"
-# glp_save_edit_events.EVTOPTH28:0 "Stability Quest Reward"
-# glp_save_edit_events.EVTOPTI28:0 "Diplomatic Quest Reward"
-# glp_save_edit_events.EVTOPTJ28:0 "Infantry Mercenary Quest Reward"
-# glp_save_edit_events.EVTOPTK28:0 "Artillery Mercenary Quest Reward"
-# glp_quest_reward_colonist:0 "Settler Quest Reward"
-# glp_quest_reward_settler:0 "Colonial Quest Reward"
-# glp_quest_reward_missionary:0 "Missionary Quest Reward"
-# glp_quest_reward_conversion:0 "Conversion Quest Reward"
-# glp_quest_reward_mercenary:0 "Mercenary Quest Reward"
-# glp_quest_reward_mercenary_inf:0 "Mercenary Quest Reward"
-# glp_quest_reward_mercenary_art:0 "Mercenary Quest Reward"
+ glp_save_edit_events.EVTCAPACTIVEA57:0 "give 10000% livespawn for 50years"
+ glp_save_edit_events.EVTCAPACTIVEA58:0 "§GThe nation is becoming unnaturally lucky§!"
+ glp_save_edit_events.EVTCAPACTIVEA59:0 "§RThe nation is becoming unnaturally unlucky§!"
+ glp_save_edit_events.EVTCAPACTIVEA60:0 "§RRemove the luck modifier§!"
+ glp_save_edit_events.EVTCAPACTIVEA61:0 "§GRemove the unluck modifier§!"
+
  glp_new_merc_company:0 "§YKnights of Round Table§! mercenary company is now available for 10 years to assist us in our military efforts!"
  glp_merc_company_expired:0 "§YKnights of Round Table§! Mercenary Company will be no longer available!"
  glp_kingts_of_round:0 "Knights of the Round Table"
@@ -887,135 +877,23 @@
  glp_save_edit_events.MAGICALA25:0 "Give them a Massive amount of magical infamy"
  glp_save_edit_events.MAGICALA26:0 "Reset magical infamy"
   
- glp_save_edit_events.EVTNAME41:0 "Choose an Announcement"
- glp_save_edit_events.EVTDESC41:0 "Choose which announcement to spawn to all players"
- glp_save_edit_events.EVTOPTA41:0 "Nevermind"
- glp_save_edit_events.EVTOPTB41:0 "End of Session"
- glp_save_edit_events.EVTOPTC41:0 "REHOST"
- glp_save_edit_events.EVTOPTD41:0 "14.44 Toast"
- glp_save_edit_events.EVTOPTE41:0 "Session end in 15 min"
- glp_save_edit_events.EVTOPTF41:0 "Conclave in 15 min"
- glp_save_edit_events.EVTOPTG41:0 "Conclave has started"
- glp_save_edit_events.EVTOPTH41:0 "Oathbreaker Declared"
- glp_save_edit_events.EVTOPTI41:0 "Ruler Sentenced to Death!"
- glp_save_edit_events.EVTOPTJ41:0 "Ruler Sentenced for Beheading"
- glp_save_edit_events.EVTOPTK41:0 "Comet Expedition"
- glp_save_edit_events.EVTOPTL41:0 "1k Years of Arthur"
- glp_save_edit_events.EVTOPTM41:0 "Quest for the Holy Grail"
- glp_save_edit_events.EVTOPTN41:0 "Holy Grail Succeeded"
- glp_save_edit_events.EVTOPTO41:0 ""
- glp_save_edit_events.EVTOPTP41:0 ""
- glp_save_edit_events.EVTOPTQ41:0 ""
- glp_save_edit_events.EVTOPTR41:0 ""
- glp_save_edit_events.EVTOPTS41:0 ""
- glp_save_edit_events.EVTOPTT41:0 ""
- glp_save_edit_events.EVTOPTU41:0 ""
- glp_save_edit_events.EVTOPTV41:0 ""
- glp_save_edit_events.EVTOPTW41:0 ""
- glp_save_edit_events.EVTOPTX41:0 ""
- glp_save_edit_events.EVTOPTY41:0 ""
- glp_save_edit_events.EVTOPTZ41:0 ""
- glp_save_edit_events.EVTOPTAA41:0 ""
- glp_save_edit_events.EVTOPTAB41:0 ""
- glp_save_edit_events.EVTOPTAC41:0 ""
- glp_save_edit_events.EVTOPTAD41:0 ""
- glp_save_edit_events.EVTNAME42:0 "Its 14.44!"
- glp_save_edit_events.EVTDESC42:0 "Huzzah!\nLet us commemorate the great battle of Varna by raising our glasses and loudly cheering 'Huzzah!'.\nFor all of us the year 1444 is not only symbolic for its impact on European politics, but also as the beginning of a new age! The Age of Europa Universalis!"
- glp_save_edit_events.EVTOPTA42:0 "Huzzah!"
- glp_save_edit_events.EVTNAME43:0 "End of Session"
- glp_save_edit_events.EVTDESC43:0 "We are done for today. See you tomorrow!"
- glp_save_edit_events.EVTOPTA43:0 "OKAY"
- glp_save_edit_events.EVTNAME44:0 "REHOST"
- glp_save_edit_events.EVTDESC44:0 "We are rehosting now. Please restart your game."
- glp_save_edit_events.EVTOPTA44:0 "OKAY"
- glp_save_edit_events.EVTNAME45:0 "End of the Day"
- glp_save_edit_events.EVTDESC45:0 "Dear Lords!\nThough the day was long and battles fought were fierce. The End Times are approaching. !\n\n§REnd of session in 15 minutes!§!"
- glp_save_edit_events.EVTOPTA45:0 "OKAY"
- glp_save_edit_events.EVTNAME46:0 "Conclave is Imminent!"
- glp_save_edit_events.EVTDESC46:0 "Hear,  hear! The Conclave of all the greatest Vampires shall assemble soon.\nCenturies ago the first Vampiric Conclave met in Transylvania to lay the foundations for our dark and bloody society. Nosferatu has been choosen as chancellor of our conclave!. Let us hold this Conclave again and together we shall decide upon the fate of Europe and the Universe! Huzzah! !\n\n§RThe Vampiric Conclave begins in 15 minutes, Count Nosferatu will inform you of the details!§!"
- glp_save_edit_events.EVTOPTA46:0 "Huzzah!"
- glp_save_edit_events.EVTNAME47:0 "Vampiric Conclave of [GetYear]"
- glp_save_edit_events.EVTDESC47:0 "Huzzah! The Vampiric Conclave of [GetYear] has begun! Each vampiric member-state who arrived has been awarded a favour to represent their voice.\n§The Vampiric Conclave of [GetYear] has started!§!"
- glp_save_edit_events.EVTOPTA47:0 "Huzzah!"
- glp_save_edit_events.EVTNAME48:0 "Oathbreaker Declared"
- glp_save_edit_events.EVTDESC48:0 "Shame! The oaths of honour have been broken! [From.Owner.GetName] has committed heinous crimes and shall be punished by The Vampiric Conclave! "
- glp_save_edit_events.EVTOPTA48:0 "Shame on them!"
- glp_save_edit_events.EVTNAME49:0 "Ruler Sentenced to Death!"
- glp_save_edit_events.EVTDESC49:0 "Royal execution! By the command of Jury and Arthur, in the name of the Round Table, [From.Owner.Monarch.GetName] [From.Owner.Monarch.Dynasty.GetName], ruler and lord of [From.Owner.GetName] has been sentenced to death! May his death serve as an example for others not to ever break the law of the republic ever again."
- glp_save_edit_events.EVTOPTA49:0 "Off with his head!"
- glp_save_edit_events.EVTNAME50:0 "Ruler Sentenced for Beheading!"
- glp_save_edit_events.EVTDESC50:0 "Execution by the Holy Sword! By the command of Jury and Arthur, in the name of the Round Table, [From.Owner.Monarch.GetName] [From.Owner.Monarch.Dynasty.GetName], ruler and lord of [From.Owner.GetName] has been sentenced to death by the Holy Sword From the Stone! Spectators may gather in the deepest vault of the castle, where the sword slumbers."
- glp_save_edit_events.EVTOPTA50:0 "Off with his head!"
- glp_save_edit_events.EVTNAME51:0 "Comet Expedition"
- glp_save_edit_events.EVTDESC51:0 "Comets are a reason for fear no more! Our hunger for knowledge rises up upon the skies and the cry for cosmic expeditions fills our imagination! "
- glp_save_edit_events.EVTOPTA51:0 "Glory to Merlin!"
- glp_save_edit_events.EVTNAME52:0 "1000th Birthday of Arthur"
- glp_save_edit_events.EVTDESC52:0 "Huzzah!\The first millenium of Arthurian Vampiric Conclavehip has passed! Arthur and Merlin themselves humbly claim it is merely one thousand years, but for peasantry and royalty alike it seems as if the Round Table lasts for eternity and will continue to rule upon our lands for yet more millenia to pass!\nLet us raise our glasses and loudly cheer Arthur! Arthur! Arthur! Huzzah! There shall be cake for the aristocracy and bread for the masses! There shall be feasts and there shall be music!"
- glp_save_edit_events.EVTOPTA52:0 "Long May He Reign!"
- glp_save_edit_events.EVTNAME53:0 "Quest for the Holy Grail"
- glp_save_edit_events.EVTDESC53:0 "His Majesty, Overlord of the Republic, Arthur II Pendragon, aided by the loyal Lords of the Republic, has set out for the quest to find the Holy Grail. Will he succeed, where will his travels take him, and what tidings will his quest bring?"
- glp_save_edit_events.EVTOPTA53:0 "Let us get the Golden Chalice!!"
- glp_save_edit_events.EVTOPTB53:0 "Wasn't the Grail just a Metaphor for the Holy Maiden?"
- glp_save_edit_events.EVTNAME54:0 "Holy Grail Succeeded"
- glp_save_edit_events.EVTDESC54:0 "Huzzah! His Majesty, Overlord of the Republic, Arthur II Pendragon has returned From his quest to find the Holy Grail! Not only has he found the legendary golden chalice full of magic, but also the greatest treasure of all!! FRIENDSHIP!!!\nOn his travels Arthur met many honourable knights and wise sages, who will now aid the Republic of the Round Table."
- glp_save_edit_events.EVTOPTA54:0 "Huzzah!"
- glp_save_edit_events.EVTNAME55:0 ""
- glp_save_edit_events.EVTDESC55:0 ""
- glp_save_edit_events.EVTOPTA55:0 ""
- glp_save_edit_events.EVTNAME56:0 ""
- glp_save_edit_events.EVTDESC56:0 ""
- glp_save_edit_events.EVTOPTA56:0 ""
- glp_save_edit_events.EVTNAME57:0 ""
- glp_save_edit_events.EVTDESC57:0 ""
- glp_save_edit_events.EVTOPTA57:0 ""
- glp_save_edit_events.EVTNAME58:0 ""
- glp_save_edit_events.EVTDESC58:0 ""
- glp_save_edit_events.EVTOPTA58:0 ""
- glp_save_edit_events.EVTNAME59:0 ""
- glp_save_edit_events.EVTDESC59:0 ""
- glp_save_edit_events.EVTOPTA59:0 ""
- glp_save_edit_events.EVTNAME60:0 ""
- glp_save_edit_events.EVTDESC60:0 ""
- glp_save_edit_events.EVTOPTA60:0 ""
- glp_save_edit_events.EVTNAME61:0 ""
- glp_save_edit_events.EVTDESC61:0 ""
- glp_save_edit_events.EVTOPTA61:0 ""
- glp_save_edit_events.EVTNAME62:0 ""
- glp_save_edit_events.EVTDESC62:0 ""
- glp_save_edit_events.EVTOPTA62:0 ""
- glp_save_edit_events.EVTNAME63:0 ""
- glp_save_edit_events.EVTDESC63:0 ""
- glp_save_edit_events.EVTOPTA63:0 ""
- glp_save_edit_events.EVTNAME64:0 ""
- glp_save_edit_events.EVTDESC64:0 ""
- glp_save_edit_events.EVTOPTA64:0 ""
- glp_save_edit_events.EVTNAME65:0 ""
- glp_save_edit_events.EVTDESC65:0 ""
- glp_save_edit_events.EVTOPTA65:0 ""
- glp_save_edit_events.EVTNAME66:0 ""
- glp_save_edit_events.EVTDESC66:0 ""
- glp_save_edit_events.EVTOPTA66:0 ""
- glp_save_edit_events.EVTNAME67:0 ""
- glp_save_edit_events.EVTDESC67:0 ""
- glp_save_edit_events.EVTOPTA67:0 ""
- glp_save_edit_events.EVTNAME68:0 ""
- glp_save_edit_events.EVTDESC68:0 ""
- glp_save_edit_events.EVTOPTA68:0 ""
- glp_save_edit_events.EVTNAME69:0 ""
- glp_save_edit_events.EVTDESC69:0 ""
- glp_save_edit_events.EVTOPTA69:0 ""
- glp_save_edit_events.EVTNAME70:0 ""
- glp_save_edit_events.EVTDESC70:0 ""
- glp_save_edit_events.EVTOPTA70:0 ""
- EVTDESC5060UPGRADE:0 "Our peasants are no longer superstitious! The appearance of a comet in the sky is seen as a good omen, as foretold by Vlad Draculea. They are convinced that in future times, it will allow us to roam the stars and colonize the Moon, Sun and beyond."
- glp_gm_events.EVTNAME3:0 "Removed Autonomy!"
- glp_gm_events.EVTDESC3:0 "Her Majesty, one of the leaders of the Vampiric Conclave - Elisabeth Bathory has visited [From.GetName] in her travels. Seeing her majesty up close, people of [From.GetName] now rejoice in being part of your nation and the Vampiric Conclave!\nUnsurprisingly, all sticks in the land of [From.GetName] are being sharpened and all virgins across the land are given to Elisabeth Bathory for taste testing!\nPrepare the blood! Lets slaughter those virgins and fill the bath with their blood!"
- glp_gm_events.EVTOPTA3:0 "Thanks Elisabeth Bathory!!"
- glp_removed_autonomy_tt:0 "§YLocal Autonomy in your province has been removed!§!"
- glp_gm_events.EVTNAME4:0 "Institution Spawned!"
- glp_gm_events.EVTDESC4:0 "His Highness, Vlad Draculea has visited [From.Owner.GetName] in his travels to share the knowledge of institution!\nPointy sticks are suddenly the fashion craze of the season! Garlic on the other hand... Not so much."
- glp_gm_events.EVTOPTA4:0 "Thank You Vlad Draculea!"
- glp_institution_spawned_tt:0 "§YInstitution has beeen spawned in one of your provinces!§!"
+ glp_save_edit_events.EVTNAME41:0 "Empire event for country [From.Owner.GetName]"
+ glp_save_edit_events.EVTDESC41:0 "Choose what event you want to trigger for the country [From.Owner.GetName]"
+ glp_save_edit_events.EMPIREZZ1:0 "Nevermind"
+ glp_save_edit_events.EMPIREA01:0 "Add the coutry into the empire"
+ glp_save_edit_events.EMPIREA02:0 "Trigger Religious conflict for the empire Corinite is the Heretic league"
+ glp_save_edit_events.EMPIREA04:0 "Trigger Religious conflict for the empire Ravelian is the Heretic league"
+ glp_save_edit_events.EMPIREA04:0 "Trigger Religious conflict for the empire Dalcabba is the Heretic league"
+ glp_save_edit_events.EMPIREA05:0 "Trigger Religious conflict for the empire Regent court is the Heretic league"
+ glp_save_edit_events.EMPIREA06:0 "Trigger Religious conflict for the empire The jaad is the Heretic league"
+ glp_save_edit_events.EMPIREA07:0 "Trigger Religious peace for the empire"
+ glp_save_edit_events.EMPIREA08:0 "[From.owner.GetName] become the emperor of the empire"
+ glp_save_edit_events.EMPIREA09:0 "[From.owner.GetName] become elector of the empire"
+ glp_save_edit_events.EMPIREA10:0 "Regent court is now the offical faith in the empire"
+ glp_save_edit_events.EMPIREA11:0 "Corinite is now the offical faith in the empire"
+ glp_save_edit_events.EMPIREA12:0 "Dalcabba is now the offical faith in the empire"
+ glp_save_edit_events.EMPIREA13:0 "Ravelian is now the offical faith in the empire"
+ glp_save_edit_events.EMPIREA14:0 "The jaad is now the offical faith in the empire"
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
