--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -94,7 +94,7 @@
  glp_save_edit_events.EVTMINORITIESREMOVEA19:0 "Supprimer la minorité homme-lézard"
  glp_save_edit_events.EVTMINORITIESREMOVEA20:0 "Supprimer la minorité mécanime"
  glp_save_edit_events_MINORITIESAPROOVE.EVTNAME1:0 "Menu d'amélioration des relations avec les minorités"
- glp_save_edit_events_MINORITIESAPROOVE.EVTDESC1:1 "Amélioration des relations avec les minorités de [MJ_minorities.GetName]"
+ glp_save_edit_events_MINORITIESAPROOVE.EVTDESC1:0 "Amélioration des relations avec les minorités de [MJ_minorities.GetName]"
  glp_save_edit_events.MINORITIESAPROOVEZZ1:0 "Laissez tomber" 
  glp_save_edit_events.MINORITIESAPROOVEA01:0 "Améliorer §Oun peu§! les relations avec la minorité elfique"
  glp_save_edit_events.MINORITIESAPROOVEA02:0 "Améliorer §Ymoyennement§! les relations avec la minorité elfique"
@@ -697,22 +697,12 @@
  glp_save_edit_events.EVTCAPACTIVEA54:0 "Activation d'une idée"
  glp_save_edit_events.EVTCAPACTIVEA55:0 "Activation d'une idée"
  glp_save_edit_events.EVTCAPACTIVEA56:0 "Activation d'une idée"
-# glp_save_edit_events.EVTOPTC28:0 "Colonial Quest Reward"
-# glp_save_edit_events.EVTOPTD28:0 "Missionary Quest Reward"
-# glp_save_edit_events.EVTOPTE28:0 "Conversion Quest Reward"
-# glp_save_edit_events.EVTOPTF28:0 "Cavalry Mercenary Quest Reward"
-# glp_save_edit_events.EVTOPTG28:0 "Trade Quest Reward"
-# glp_save_edit_events.EVTOPTH28:0 "Stability Quest Reward"
-# glp_save_edit_events.EVTOPTI28:0 "Diplomatic Quest Reward"
-# glp_save_edit_events.EVTOPTJ28:0 "Infantry Mercenary Quest Reward"
-# glp_save_edit_events.EVTOPTK28:0 "Artillery Mercenary Quest Reward"
-# glp_quest_reward_colonist:0 "Settler Quest Reward"
-# glp_quest_reward_settler:0 "Colonial Quest Reward"
-# glp_quest_reward_missionary:0 "Missionary Quest Reward"
-# glp_quest_reward_conversion:0 "Conversion Quest Reward"
-# glp_quest_reward_mercenary:0 "Mercenary Quest Reward"
-# glp_quest_reward_mercenary_inf:0 "Mercenary Quest Reward"
-# glp_quest_reward_mercenary_art:0 "Mercenary Quest Reward"
+ glp_save_edit_events.EVTCAPACTIVEA57:0 "Don de 10000% d'espérence de vie pour 50ans"
+ glp_save_edit_events.EVTCAPACTIVEA58:0 "§GLa nation deviens annormalement chanceuse§!"
+ glp_save_edit_events.EVTCAPACTIVEA59:0 "§RLa nation deviens annormalement malchanceuse§!"
+ glp_save_edit_events.EVTCAPACTIVEA60:0 "§RRetire le modificateur de chance§!"
+ glp_save_edit_events.EVTCAPACTIVEA61:0 "§GRetire le modificateur de malchance§!"
+
  glp_new_merc_company:0 "§YLes Chevaliers de la Table Ronde§! sont désormais disponibles pour 10 ans afin de nous aider dans nos efforts militaires !"
  glp_merc_company_expired:0 "§YLes Chevaliers de la Table Ronde§! ne seront plus disponibles !"
  glp_kingts_of_round:0 "Chevaliers de la Table Ronde"
@@ -834,126 +824,25 @@
  glp_save_edit_events.MAGICALA25:0 "Leur donner une quantité massive d'infamie magique"
  glp_save_edit_events.MAGICALA26:0 "Réinitialiser l'infamie magique"
  
- glp_save_edit_events.EVTNAME41:0 "Choisir une annonce"
- glp_save_edit_events.EVTDESC41:0 "Choisissez quelle annonce envoyer à tous les joueurs."
- glp_save_edit_events.EVTOPTA41:0 "Non, peu importe"
- glp_save_edit_events.EVTOPTB41:0 "Fin de session"
- glp_save_edit_events.EVTOPTC41:0 "REHOST"
- glp_save_edit_events.EVTOPTD41:0 "Toast de 14.44"
- glp_save_edit_events.EVTOPTE41:0 "Fin de session dans 15 min"
- glp_save_edit_events.EVTOPTF41:0 "Conclave dans 15 min"
- glp_save_edit_events.EVTOPTG41:0 "Le Conclave a commencé"
- glp_save_edit_events.EVTOPTH41:0 "Un parjure a été déclaré"
- glp_save_edit_events.EVTOPTI41:0 "Dirigeant condamné à mort !"
- glp_save_edit_events.EVTOPTJ41:0 "Dirigeant condamné à la décapitation !"
- glp_save_edit_events.EVTOPTK41:0 "Expédition cométaire"
- glp_save_edit_events.EVTOPTL41:0 "1 000 ans d'Arthur"
- glp_save_edit_events.EVTOPTM41:0 "Quête du Saint-Graal"
- glp_save_edit_events.EVTOPTN41:0 "Saint-Graal réussi"
- glp_save_edit_events.EVTOPTO41:0 ""
- glp_save_edit_events.EVTOPTP41:0 ""
- glp_save_edit_events.EVTOPTQ41:0 ""
- glp_save_edit_events.EVTOPTR41:0 ""
- glp_save_edit_events.EVTOPTS41:0 ""
- glp_save_edit_events.EVTOPTT41:0 ""
- glp_save_edit_events.EVTOPTU41:0 ""
- glp_save_edit_events.EVTOPTV41:0 ""
- glp_save_edit_events.EVTOPTW41:0 ""
- glp_save_edit_events.EVTOPTX41:0 ""
- glp_save_edit_events.EVTOPTY41:0 ""
- glp_save_edit_events.EVTOPTZ41:0 ""
- glp_save_edit_events.EVTOPTAA41:0 ""
- glp_save_edit_events.EVTOPTAB41:0 ""
- glp_save_edit_events.EVTOPTAC41:0 ""
- glp_save_edit_events.EVTOPTAD41:0 ""
- glp_save_edit_events.EVTNAME42:0 "Il est 14.44 !"
- glp_save_edit_events.EVTDESC42:0 "Hourra !\nLevons nos verres et crions 'Hourra !' pour commémorer la grande bataille de Varna.\nPour nous tous, l'année 1444 n'est pas seulement symbolique pour son impact sur la politique européenne, mais aussi comme le début d'une nouvelle ère ! L'Ère d'Europa Universalis !"
- glp_save_edit_events.EVTOPTA42:0 "Hourra !"
- glp_save_edit_events.EVTNAME43:0 "Fin de session"
- glp_save_edit_events.EVTDESC43:0 "Nous avons terminé pour aujourd'hui. À demain !"
- glp_save_edit_events.EVTOPTA43:0 "D'ACCORD"
- glp_save_edit_events.EVTNAME44:0 "REHOST"
- glp_save_edit_events.EVTDESC44:0 "Nous faisons un rehost maintenant. Veuillez redémarrer votre jeu."
- glp_save_edit_events.EVTOPTA44:0 "D'ACCORD"
- glp_save_edit_events.EVTNAME45:0 "Fin de la journée"
- glp_save_edit_events.EVTDESC45:0 "Chers Seigneurs !\nBien que la journée ait été longue et les batailles féroces, les Temps de la Fin approchent.\n\n§RFin de session dans 15 minutes !§!"
- glp_save_edit_events.EVTOPTA45:0 "D'ACCORD"
- glp_save_edit_events.EVTNAME46:0 "Le Conclave est imminent !"
- glp_save_edit_events.EVTDESC46:0 "Entendez, entendez ! Le Conclave de tous les plus grands Vampires va bientôt se réunir.\nIl y a des siècles, le premier Conclave Vampirique s'est tenu en Transylvanie pour jeter les bases de notre société sombre et sanglante. Nosferatu a été choisi comme chancelier de notre conclave ! Tenons ce Conclave à nouveau et décidons ensemble du sort de l'Europe et de l'Univers ! Hourra !\n\n§RLe Conclave Vampirique commence dans 15 minutes, le Comte Nosferatu vous informera des détails !§!"
- glp_save_edit_events.EVTOPTA46:0 "Hourra !"
- glp_save_edit_events.EVTNAME47:0 "Conclave Vampirique de [GetYear]"
- glp_save_edit_events.EVTDESC47:0 "Hourra ! Le Conclave Vampirique de [GetYear] a commencé ! Chaque État membre vampirique présent a reçu une faveur pour représenter sa voix.\n§Le Conclave Vampirique de [GetYear] a commencé !§!"
- glp_save_edit_events.EVTOPTA47:0 "Hourra !"
- glp_save_edit_events.EVTNAME48:0 "Un parjure a été déclaré"
- glp_save_edit_events.EVTDESC48:0 "Honte ! Les serments d'honneur ont été brisés ! [From.Owner.GetName] a commis des crimes odieux et sera puni par le Conclave Vampirique !"
- glp_save_edit_events.EVTOPTA48:0 "Honte à eux !"
- glp_save_edit_events.EVTNAME49:0 "Dirigeant condamné à mort !"
- glp_save_edit_events.EVTDESC49:0 "Exécution royale ! Par ordre du Jury et d'Arthur, au nom de la Table Ronde, [From.Owner.Monarch.GetName] [From.Owner.Monarch.Dynasty.GetName], dirigeant et seigneur de [From.Owner.GetName], a été condamné à mort ! Que sa mort serve d'exemple pour que plus personne ne brise jamais les lois de la république !"
- glp_save_edit_events.EVTOPTA49:0 "Qu'on lui coupe la tête !"
- glp_save_edit_events.EVTNAME50:0 "Dirigeant condamné à la décapitation !"
- glp_save_edit_events.EVTDESC50:0 "Exécution par l'Épée Sainte ! Par ordre du Jury et d'Arthur, au nom de la Table Ronde, [From.Owner.Monarch.GetName] [From.Owner.Monarch.Dynasty.GetName], dirigeant et seigneur de [From.Owner.GetName], a été condamné à mort par l'Épée Sainte tirée de la Pierre ! Les spectateurs peuvent se rassembler dans la crypte la plus profonde du château, où l'épée repose."
- glp_save_edit_events.EVTOPTA50:0 "Qu'on lui coupe la tête !"
- glp_save_edit_events.EVTNAME51:0 "Expédition cométaire"
- glp_save_edit_events.EVTDESC51:0 "Les comètes ne sont plus une source de peur ! Notre soif de connaissance s'élève vers les cieux et le cri pour des expéditions cosmiques remplit notre imagination !"
- glp_save_edit_events.EVTOPTA51:0 "Gloire à Merlin !"
- glp_save_edit_events.EVTNAME52:0 "1 000e anniversaire d'Arthur"
- glp_save_edit_events.EVTDESC52:0 "Hourra !\nLe premier millénaire du Conclave Vampirique Arthurien est passé ! Arthur et Merlin eux-mêmes affirment humblement qu'il ne s'agit que de mille ans, mais pour la paysannerie et la royauté, il semble que la Table Ronde dure depuis l'éternité et continuera à régner sur nos terres pendant encore des millénaires !\nLevons nos verres et crions 'Arthur ! Arthur ! Arthur ! Hourra !' Il y aura du gâteau pour l'aristocratie et du pain pour les masses ! Il y aura des festins et il y aura de la musique !"
- glp_save_edit_events.EVTOPTA52:0 "Longue vie à son règne !"
- glp_save_edit_events.EVTNAME53:0 "Quête du Saint-Graal"
- glp_save_edit_events.EVTDESC53:0 "Sa Majesté, Souverain de la République, Arthur II Pendragon, aidé par les loyaux Seigneurs de la République, s'est lancé dans la quête pour trouver le Saint-Graal. Réussira-t-il ? Où ses voyages le mèneront-ils ? Et quelles nouvelles sa quête apportera-t-elle ?"
- glp_save_edit_events.EVTOPTA53:0 "Allons chercher le Calice d'Or !!"
- glp_save_edit_events.EVTOPTB53:0 "Le Graal n'était-il pas juste une métaphore pour la Sainte Vierge ?"
- glp_save_edit_events.EVTNAME54:0 "Saint-Graal réussi"
- glp_save_edit_events.EVTDESC54:0 "Hourra ! Sa Majesté, Souverain de la République, Arthur II Pendragon, est revenu de sa quête pour trouver le Saint-Graal ! Non seulement il a trouvé le légendaire calice d'or rempli de magie, mais aussi le plus grand trésor de tous ! L'AMITIÉ !!!\nLors de ses voyages, Arthur a rencontré de nombreux chevaliers honorables et sages, qui aideront désormais la République de la Table Ronde."
- glp_save_edit_events.EVTOPTA54:0 "Hourra !"
- glp_save_edit_events.EVTNAME55:0 ""
- glp_save_edit_events.EVTDESC55:0 ""
- glp_save_edit_events.EVTOPTA55:0 ""
- glp_save_edit_events.EVTNAME56:0 ""
- glp_save_edit_events.EVTDESC56:0 ""
- glp_save_edit_events.EVTOPTA56:0 ""
- glp_save_edit_events.EVTNAME57:0 ""
- glp_save_edit_events.EVTDESC57:0 ""
- glp_save_edit_events.EVTOPTA57:0 ""
- glp_save_edit_events.EVTNAME58:0 ""
- glp_save_edit_events.EVTDESC58:0 ""
- glp_save_edit_events.EVTOPTA58:0 ""
- glp_save_edit_events.EVTNAME59:0 ""
- glp_save_edit_events.EVTDESC59:0 ""
- glp_save_edit_events.EVTOPTA59:0 ""
- glp_save_edit_events.EVTNAME60:0 ""
- glp_save_edit_events.EVTDESC60:0 ""
- glp_save_edit_events.EVTOPTA60:0 ""
- glp_save_edit_events.EVTNAME61:0 ""
- glp_save_edit_events.EVTDESC61:0 ""
- glp_save_edit_events.EVTOPTA61:0 ""
- glp_save_edit_events.EVTNAME62:0 ""
- glp_save_edit_events.EVTDESC62:0 ""
- glp_save_edit_events.EVTOPTA62:0 ""
- glp_save_edit_events.EVTNAME63:0 ""
- glp_save_edit_events.EVTDESC63:0 ""
- glp_save_edit_events.EVTOPTA63:0 ""
- glp_save_edit_events.EVTNAME64:0 ""
- glp_save_edit_events.EVTDESC64:0 ""
- glp_save_edit_events.EVTOPTA64:0 ""
- glp_save_edit_events.EVTNAME65:0 ""
- glp_save_edit_events.EVTDESC65:0 ""
- glp_save_edit_events.EVTOPTA65:0 ""
- glp_save_edit_events.EVTNAME66:0 ""
- glp_save_edit_events.EVTDESC66:0 ""
- glp_save_edit_events.EVTOPTA66:0 ""
- glp_save_edit_events.EVTNAME67:0 ""
- glp_save_edit_events.EVTDESC67:0 ""
- glp_save_edit_events.EVTOPTA67:0 ""
- glp_save_edit_events.EVTNAME68:0 ""
- glp_save_edit_events.EVTDESC68:0 ""
- glp_save_edit_events.EVTOPTA68:0 ""
- glp_save_edit_events.EVTNAME69:0 ""
- glp_save_edit_events.EVTDESC69:0 ""
- glp_save_edit_events.EVTOPTA69:0 ""
- glp_save_edit_events.EVTNAME70:0 ""
- glp_save_edit_events.EVTDESC70:0 ""
- glp_save_edit_events.EVTOPTA70:0 ""
+ glp_save_edit_events.EVTNAME41:0 "Evenement d'empire pour le pays [From.Owner.GetName]"
+ glp_save_edit_events.EVTDESC41:0 "Choissiez quel type d'événement d'empire vous souhaitez déclencher pour le pays [From.owner.GetName]."
+ glp_save_edit_events.EMPIREZZ1:0 "Laissez tomber"
+ glp_save_edit_events.EMPIREA01:0 "Ajouter le pays dans l'empire"
+ glp_save_edit_events.EMPIREA02:0 "Déclanche la guerre des ligues Corinite est la ligue hérétique"
+ glp_save_edit_events.EMPIREA04:0 "Déclanche la guerre des ligues Ravelian est la ligue hérétique"
+ glp_save_edit_events.EMPIREA04:0 "Déclanche la guerre des ligues Dalcabba est la ligue hérétique"
+ glp_save_edit_events.EMPIREA05:0 "Déclanche la guerre des ligues Regent court est la ligue hérétique"
+ glp_save_edit_events.EMPIREA06:0 "Déclanche la guerre des ligues The jaad est la ligue hérétique"
+ glp_save_edit_events.EMPIREA07:0 "Déclanche la paix religieuse dans l'empire"
+ glp_save_edit_events.EMPIREA08:0 "[From.owner.GetName] deviens l'empereur de l'empire"
+ glp_save_edit_events.EMPIREA09:0 "[From.owner.GetName] deviens un électeur de l'empire"
+ glp_save_edit_events.EMPIREA10:0 "Regent court est maintenant la religion officielle de l'empire"
+ glp_save_edit_events.EMPIREA11:0 "Corinite est maintenant la religion officielle de l'empire"
+ glp_save_edit_events.EMPIREA12:0 "Dalcabba est maintenant la religion officielle de l'empire"
+ glp_save_edit_events.EMPIREA13:0 "Ravelian est maintenant la religion officielle de l'empire"
+ glp_save_edit_events.EMPIREA14:0 "The jaad est maintenant la religion officielle de l'empire"
+
+
  EVTDESC5060UPGRADE:0 "Nos paysans ne sont plus superstitieux ! L'apparition d'une comète dans le ciel est considérée comme un bon présage, comme l'a prédit Vlad Draculea. Ils sont convaincus qu'à l'avenir, cela nous permettra de voyager parmi les étoiles et de coloniser la Lune, le Soleil et au-delà."
  glp_gm_events.EVTNAME3:0 "Autonomie supprimée !"
  glp_gm_events.EVTDESC3:0 "Sa Majesté, l'une des dirigeantes du Conclave Vampirique, Élisabeth Báthory, a visité [From.GetName] lors de ses voyages. En voyant Sa Majesté de près, les habitants de [From.GetName] se réjouissent désormais de faire partie de votre nation et du Conclave Vampirique !\nSans surprise, tous les bâtons du pays de [From.GetName] sont aiguisés et toutes les vierges du pays sont offertes à Élisabeth Báthory pour des tests de goût !\nPréparez le sang ! Massacrons ces vierges et remplissons la baignoire de leur sang !"
