Flag for monuments

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -1019,6 +1019,8 @@
  glp_save_edit_events.BUILDINGA86:0 "Destroy the Fortress in [glp_builder_nation.GetName]" 
 
  glp_save_edit_events.EVTBATA05:0 "Destroy every building in [From.GetName]"
+ glp_save_edit_events.EVTBATA06:0 "The country [From.Owner.GetName] can build house of redemption"
+ glp_save_edit_events.EVTBATA07:0 "The country [From.Owner.GetName] can build the astra bank"
 
  glp_save_edit_events.EVTNAME76:0 "Changing developpement in province [From.GetName]"
  glp_save_edit_events.EVTDESC76:0 "Choose what type of developpement you want to change in [From.GetName].\n\n§YYou have the power to make thie province richer or poorer§!"
