--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -978,6 +978,10 @@
  glp_save_edit_events.BUILDINGA86:0 "Détruire la Forteresse dans [glp_builder_nation.GetName]"
  
  glp_save_edit_events.EVTBATA05:0 "Détruire tous les bâtiments dans [From.GetName]"
+ glp_save_edit_events.EVTBATA06:0 "Le pays [From.Owner.GetName] peut construire la maison de la rédemption"
+ glp_save_edit_events.EVTBATA07:0 "Le pays [From.Owner.GetName] peut construire l'astra bank"
+
+
  glp_save_edit_events.EVTNAME76:0 "Changer le développement dans la province [From.GetName]"
  glp_save_edit_events.EVTDESC76:0 "Choisissez quel type de développement vous souhaitez modifier dans [From.GetName].\n\n§YVous avez le pouvoir de rendre cette province plus riche ou plus pauvre§!"
  glp_save_edit_events.EVTDEVOPTZZ1:0 "Laissez tomber"
