event poisson ragnar

--- a/3362815204/localisation/anb_tradegoods&event_l_french.yml
+++ b/3362815204/localisation/anb_tradegoods&event_l_french.yml
@@ -298,3 +298,7 @@
  anb_price.106.a:0 "Nos alchimistes absorbent tout le marché."
  glass_potion_2:0 "Verre de potion rare"
 
+ anb_price.107.t:0 "Un peu de Saumon ragnar ?"
+ anb_price.107.d:0 "https://www.youtube.com/watch?v=e_rPbaLmzSM"
+ anb_price.107.a:0 "salakis au bon lait de brebis"
+ SALAKIS_BREBISS:0 "salakis au bon lait de brebis"
