--- a/3362815204/localisation/anb_tradegoods&event_l_english.yml
+++ b/3362815204/localisation/anb_tradegoods&event_l_english.yml
@@ -297,3 +297,8 @@
  anb_price.106.d:0 "Glass production is now overwhelmed by the guild’s orders. Prices are skyrocketing, and even the simplest container has become a luxury."
  anb_price.106.a:0 "Our alchemists are absorbing the entire market."
  glass_potion_2:0 "Rare Potion Glass"
+
+ anb_price.107.t:0 "Un peu de Saumon ragnar ?"
+ anb_price.107.d:0 "https://www.youtube.com/watch?v=e_rPbaLmzSM"
+ anb_price.107.a:0 "salakis au bon lait de brebis"
+ SALAKIS_BREBISS:0 "salakis au bon lait de brebis"
