set up prix du poisson

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -759,6 +759,8 @@
  glp_save_edit_events.EVTMJEVTZZ1:0 "Nevermind"
  glp_save_edit_events.EVTMJEVTA01:0 "Event of the slave speculation"
  glp_save_edit_events.EVTMJEVTA01TT:0 "This event grant a temporary boost for 35 years for thoses who choose to join the embrace the slave speculation the aftermath is pricey..."
+ glp_save_edit_events.EVTMJEVTA02:0 "Event of fish price"
+ glp_save_edit_events.EVTMJEVTA02TT:0 "Un peu de saumon ragnar, Salakis au bon lait de brebis"
  glp_slave_speculation_bonus_modifier:0 "On the orcish slave market"
  glp_slave_speculation_malus_modifier:0 "Outside of the orcish slave market"
 
