--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -757,6 +757,8 @@
  glp_save_edit_events.EVTMJEVTZZ1:0 "Non, peu importe"
  glp_save_edit_events.EVTMJEVTA01:0 "Événement de la spéculation sur les esclaves"
  glp_save_edit_events.EVTMJEVTA01TT:0 "Cet événement offre un bonus temporaire de 35 ans à ceux qui choisissent de participer à la spéculation sur les esclaves, mais les conséquences seront coûteuses..."
+ glp_save_edit_events.EVTMJEVTA02:0 "Événement pour augmenter le prix du poisson"
+ glp_save_edit_events.EVTMJEVTA02TT:0 "Un peu de saumon ragnar, Salakis au bon lait de brebis"
  glp_slave_speculation_bonus_modifier:0 "Sur le marché des esclaves orques"
  glp_slave_speculation_malus_modifier:0 "En dehors du marché des esclaves orques"
  
@@ -980,7 +982,6 @@
  glp_save_edit_events.EVTBATA05:0 "Détruire tous les bâtiments dans [From.GetName]"
  glp_save_edit_events.EVTBATA06:0 "Le pays [From.Owner.GetName] peut construire la maison de la rédemption"
  glp_save_edit_events.EVTBATA07:0 "Le pays [From.Owner.GetName] peut construire l'astra bank"
-
 
  glp_save_edit_events.EVTNAME76:0 "Changer le développement dans la province [From.GetName]"
  glp_save_edit_events.EVTDESC76:0 "Choisissez quel type de développement vous souhaitez modifier dans [From.GetName].\n\n§YVous avez le pouvoir de rendre cette province plus riche ou plus pauvre§!"
